--- a/src/modalDialog.html
+++ b/src/modalDialog.html
@@ -12,6 +12,10 @@
 </button>
 
 <button type="button"
+        onclick="window.dialog.showAjaxDialog('lorem.html')">Show ajax dialog
+</button>
+
+<button type="button"
         onclick="window.dialog.showDialog('lorem.html', 'warning')">Show dialog
 </button>
 
