--- a/src/modalDialog.html
+++ b/src/modalDialog.html
@@ -16,7 +16,11 @@
 </button>
 
 <button type="button"
-        onclick="window.dialog.showDialog('lorem.html', 'warning')">Show dialog
+        onclick="window.dialog.showDialog('lorem.html', 'warning')">Show dialog warning
+</button>
+
+<button type="button"
+        onclick="window.dialog.showDialog('lorem.html', 'error')">Show dialog error
 </button>
 
 <button type="button"
