--- a/src/tab-component.html
+++ b/src/tab-component.html
@@ -13,11 +13,30 @@
 
 <input autofocus type="text" value="Hello"/>
 
-<nav tabindex="0" class="tab-component">
-    <button tabindex="-1" data-tab-x="1">button 1</button>
-    <button tabindex="-2" data-tab-x="2">button 2</button>
-    <button tabindex="-3" data-tab-x="3">button 3</button>
+<nav class="tab-component" style="display: flex;flex-direction: column;">
+    <button tabindex="0" data-tab-y="1">button 1</button>
+    <button tabindex="-1" data-tab-y="2">button 2</button>
+    <button tabindex="-1" data-tab-y="3">button 3</button>
 </nav>
+
+<table class="tab-component">
+    <tr>
+        <td>
+            <button tabindex="0" data-tab-x="1" data-tab-y="1">11</button>
+        </td>
+        <td>
+            <button tabindex="-1" data-tab-x="2" data-tab-y="1">21</button>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <button tabindex="-1" data-tab-x="1" data-tab-y="2">12</button>
+        </td>
+        <td>
+            <button tabindex="-1" data-tab-x="2" data-tab-y="2">22</button>
+        </td>
+    </tr>
+</table>
 
 <textarea>Wolfgang</textarea>
 
