--- a/src/tab-component.html
+++ b/src/tab-component.html
@@ -14,26 +14,29 @@
 <input autofocus type="text" value="Hello"/>
 
 <nav class="tab-component" style="display: flex;flex-direction: column;">
-    <button tabindex="0" data-tab-y="1">button 1</button>
-    <button tabindex="-1" data-tab-y="2">button 2</button>
-    <button tabindex="-1" data-tab-y="3">button 3</button>
+    <button data-tab-y="1">button 1</button>
+    <button data-tab-y="2">button 2</button>
+    <button data-tab-y="3">button 3</button>
 </nav>
 
 <table class="tab-component">
     <tr>
         <td>
-            <button tabindex="0" data-tab-x="1" data-tab-y="1">11</button>
+            <button data-tab-x="1" data-tab-y="1">11</button>
         </td>
         <td>
-            <button tabindex="-1" data-tab-x="2" data-tab-y="1">21</button>
+            <button data-tab-x="2" data-tab-y="1">21</button>
+        </td>
+        <td>
+            <button data-tab-x="3" data-tab-y="1">31</button>
         </td>
     </tr>
     <tr>
         <td>
-            <button tabindex="-1" data-tab-x="1" data-tab-y="2">12</button>
+            <button data-tab-x="1" data-tab-y="2">12</button>
         </td>
         <td>
-            <button tabindex="-1" data-tab-x="2" data-tab-y="2">22</button>
+            <button data-tab-x="2" data-tab-y="2">22</button>
         </td>
     </tr>
 </table>
