sorted, keydown on element, better isHidden

--- a/src/tab-component.html
+++ b/src/tab-component.html
@@ -83,6 +83,11 @@
                 <button type="button" data-tab-x="2" data-tab-y="3">23</button>
             </td>
         </tr>
+        <tr>
+            <td>
+                <button type="button" data-tab-y="4">14</button>
+            </td>
+        </tr>
     </table>
 </form>
 <script>
